Done Most of it

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -107,33 +107,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 51px;
+  padding-top: 60px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .dropdown-submenu {
   position: relative;
@@ -356,13 +356,19 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="plotly.html">Plotly</a>
+</li>
+<li>
+  <a href="Dashboard.html">Dashboard</a>
+</li>
+<li>
+  <a href="mailto:&lt;leomultiverse@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="http://github.com/&lt;Leooolzh&gt;/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -381,9 +387,26 @@ div.tocify {
 </div>
 
 
-<div id="this-page-has-information-about-me" class="section level1">
-<h1>This page has information about me</h1>
-<p>I am in p8105</p>
+<div id="this-page-has-my-academic-and-professional-experiences" class="section level1">
+<h1>This page has my academic and professional experiences</h1>
+<hr />
+<div id="education" class="section level4">
+<h4>Education:</h4>
+<p>University of British Columbia, Vancouver, Canada</p>
+<p>Bachelor of Science in Mathematics</p>
+<p>Minor in Economics</p>
+<hr />
+</div>
+<div id="projects-and-research-experience" class="section level4">
+<h4>Projects and Research Experience:</h4>
+<p>Research assistant of Prof. Sergei Severinov</p>
+<p>Helped to solve a system of ordinary differential equations using Matlab</p>
+<hr />
+</div>
+<div id="work-experiences" class="section level4">
+<h4>Work Experiences</h4>
+<p>Intern bioinformatician at Basecare Medical Devices, Suzhou, China</p>
+</div>
 </div>
 
 
