--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 
 
-<title>My awesome website</title>
+<title>My Resume</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -107,33 +107,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 51px;
+  padding-top: 60px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .dropdown-submenu {
   position: relative;
@@ -356,13 +356,19 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="plotly.html">Plotly</a>
+</li>
+<li>
+  <a href="Dashboard.html">Dashboard</a>
+</li>
+<li>
+  <a href="mailto:&lt;leomultiverse@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="http://github.com/&lt;Leooolzh&gt;/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -376,27 +382,20 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">My Resume</h1>
 
 </div>
 
 
-<div id="this-is-jeffs-awesome-website" class="section level1">
-<h1>This is Jeff’s awesome website</h1>
-<p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
-<div id="subsection" class="section level2">
-<h2>Subsection</h2>
-<p>Add some text here</p>
-<pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.287651730  1.289611455 -0.209511811 -0.009610938 -0.644413023
-##  [6] -0.159765830  0.527351638 -2.131752100  0.890828592  0.857876489</code></pre>
-</div>
+<div id="this-is-my-website-for-p8105-assignment-4" class="section level1">
+<h1>This is my website for P8105 assignment 4</h1>
+<p><img src="Columbia.jpg" /></p>
 <div id="links" class="section level2">
 <h2>Links</h2>
-<p>Link to useful sites for data science</p>
+<p>Links to my GitHub and Email</p>
 <ul>
-<li><a href="https://www.google.com/">Google</a></li>
-<li><a href="https://p8105.com">P8105</a></li>
+<li><a href="https://github.com/Leooolzh/Leooolzh.github.io">GitHub</a></li>
+<li><a href="leomultiverse@gmail.com">P8105</a></li>
 </ul>
 </div>
 <div id="local-image" class="section level2">
