--- a/index.html
+++ b/index.html
@@ -395,12 +395,12 @@ div.tocify {
 <p>Links to my GitHub and Email</p>
 <ul>
 <li><a href="https://github.com/Leooolzh/Leooolzh.github.io">GitHub</a></li>
-<li><a href="leomultiverse@gmail.com">P8105</a></li>
+<li><a href="leomultiverse@gmail.com">Gmail</a></li>
 </ul>
 </div>
 <div id="local-image" class="section level2">
 <h2>Local image</h2>
-<p><img src="Racoon.jpg" /></p>
+<p><img src="Cutie.jpg" /></p>
 </div>
 <div id="link-to-page-within-the-site" class="section level2">
 <h2>link to page within the site</h2>
